--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,4 +1,17 @@
 @import 'styles/_variables';
 
 .page {
+  width: 40rem;
+  margin: 0 auto;
+  padding: 1rem 0;
+}
+
+.header {
+  /* 'composes' breaks testing right now lol.
+   *composes: body-text from 'styles/_typography.css';
+   */
+
+  h1 {
+    text-align: center;
+  }
 }
