checkpoint now that i know wtf is going on with testing 'composes from'

--- a/src/components/Card/Body/Body.css
+++ b/src/components/Card/Body/Body.css
@@ -1,7 +1,8 @@
 @import 'styles/_variables';
+@import 'styles/_typography';
 @import '../Card';
 
 .wrapper {
   padding: $content-padding;
-  composes: body-text from 'styles/_typography.css';
+  composes: body-text;
 }
