--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,4 +1,5 @@
 @import 'styles/_variables';
+@import 'styles/_typography';
 
 .page {
   width: 40rem;
@@ -7,9 +8,7 @@
 }
 
 .header {
-  /* 'composes' breaks testing right now lol.
-   *composes: body-text from 'styles/_typography.css';
-   */
+ composes: body-text;
 
   h1 {
     text-align: center;
