--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -22,7 +22,9 @@ $body-font-size: 16px;
 $site-text-color: $tyre;
 $site-font-family: 'Roboto', sans-serif;
 $site-link-color: #03a9f4;
-$site-margin: 2rem; /* TODO remove and just use rem? */
+$h1-size: 2em;
+$h2-size: 1.5em;
+$h3-size: 1.3em;
 
 /* Buttons */
 $button-border-radius: 0.15em;
