--- a/src/components/Card/Actions/Actions.css
+++ b/src/components/Card/Actions/Actions.css
@@ -3,4 +3,12 @@
 
 .wrapper {
   composes: body-text from 'styles/_typography.css';
+
+  :global {
+    .button {
+      + .button {
+        margin-left: 1em;
+      }
+    }
+  }
 }
