--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -26,11 +26,18 @@ $h1-size: 2em;
 $h2-size: 1.5em;
 $h3-size: 1.3em;
 
-/* Buttons */
-$button-border-radius: 0.15em;
-
-/* Experimental */
-$box-shadow-0: 0;
-$box-shadow-1: 0 -0.1rem 0.25rem -0.2rem rgba(0, 0, 0, 0.12),
-               0 0.1rem 0.3rem rgba(0, 0, 0, 0.12),
-               0 0.1rem 0.2rem rgba(0, 0, 0, 0.24);
+/* Shadows */
+/* Full disclosure, these shadows are ... ahem.. borrowed from material-design-lite.
+ * https://github.com/google/material-design-lite/blob/mdl-1.x/src/_mixins.scss
+ */
+$shadow-key-umbra-opacity: 0.2;
+$shadow-key-penumbra-opacity: 0.14;
+$shadow-ambient-shadow-opacity: 0.12;
+$shadow-focus: 0 0 8px rgba(0,0,0,.18),0 8px 16px rgba(0,0,0,.36);
+$shadow-0: 0;
+$shadow-1: 0 2px 2px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+           0 3px 1px -2px rgba(0, 0, 0, $shadow-key-umbra-opacity),
+           0 1px 5px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
+$shadow-2: 0 3px 4px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+           0 3px 3px -2px rgba(0, 0, 0, $shadow-key-umbra-opacity),
+           0 1px 8px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
