--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -20,7 +20,8 @@ $negative-color: #b00;
 /* Typography */
 $body-font-size: 16px;
 $site-text-color: $tyre;
-$site-font-family: 'Roboto', sans-serif;
+/*$site-font-family: 'Roboto', sans-serif;*/
+$site-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $site-link-color: #03a9f4;
 $h1-size: 2em;
 $h2-size: 1.5em;
