--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,9 +1,22 @@
 @import 'styles/_variables';
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .page {
   width: 40rem;
   margin: 0 auto;
   padding: 1rem 0;
+
+  animation: fade-in 0.25s;
+  animation-iteration-count: 1;
 }
 
 .header {
@@ -16,10 +29,6 @@
 }
 
 .card {
-  /*
-   *composes: shadow-1 from 'styles/_shadows.css';
-   */
-
   transition: 0.15s box-shadow ease-in-out;
 
   &:hover {
