--- a/src/components/StarButton/StarButton.css
+++ b/src/components/StarButton/StarButton.css
@@ -1,4 +1,24 @@
 @import 'styles/_variables';
 
+@keyframes scale {
+  50% {
+    transform: scale(1.75);
+  }
+}
+
 .button {
+  :global .icon {
+    color: red;
+  }
+
+  &[data-starred="true"] {
+    /* don't just do `:global .icon` or else the
+     * @keyframe name will be mismatched w/ the
+     * `animation: keyframeName` because it will
+     * be in in :global (block) scope */
+    :global(.icon) {
+      animation: scale 0.2s;
+      animation-iteration-count: 1;
+    }
+  }
 }
