--- a/src/components/frames/StandardPage/StandardPage.css
+++ b/src/components/frames/StandardPage/StandardPage.css
@@ -15,6 +15,8 @@
   margin: 0 auto;
   padding: 1rem 0;
 
-  animation: fade-in 0.25s;
-  animation-iteration-count: 1;
+  > * {
+    animation: fade-in 0.15s;
+    animation-iteration-count: 1;
+  }
 }
