more icon/button/text alignment tweaks (still not happy tho)

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -50,6 +50,7 @@ $button-border-radius: 2px;
 
   padding: $button-padding;
 
+  font-size: $body-font-size;
   font-family: $site-font-family;
   line-height: 1;
 
