break About stuff into GithubUser component/container/etc; improve About page; misc other fixes

--- a/src/components/pages/About/About.css
+++ b/src/components/pages/About/About.css
@@ -2,3 +2,13 @@
 
 .page {
 }
+
+.intro {
+  composes: body-text from 'styles/_typography.css';
+  margin-bottom: 1rem;
+}
+
+.human {
+  max-width: 15rem;
+  text-align: center;
+}
