--- a/src/styles/_typography.css
+++ b/src/styles/_typography.css
@@ -15,6 +15,10 @@ a {
  color: $site-link-color;
 }
 
+dd {
+  margin: 0; /* Chrome adds -webkit-margin-start */
+}
+
 /* TODO explanation of why font-family isn't set at body (i.e. faster rendering) */
 .body-text {
   font-family: $site-font-family;
