--- a/src/styles/_typography.css
+++ b/src/styles/_typography.css
@@ -15,6 +15,10 @@ a {
  color: $site-link-color;
 }
 
+dl {
+  margin: 0; /* Chrome adds -webkit-margin-before|after */
+}
+
 dd {
   margin: 0; /* Chrome adds -webkit-margin-start */
 }
