hack together a little 'facebook-like' loading state for components/GithubUser

--- a/src/components/GithubUser/GithubUser.css
+++ b/src/components/GithubUser/GithubUser.css
@@ -2,3 +2,14 @@
 
 .wrapper {
 }
+
+@keyframes dim-blink {
+  50% {
+    opacity: 0.25;
+  }
+}
+
+.loading-text {
+  animation: dim-blink 1.25s;
+  animation-iteration-count: infinite;
+}
