--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -35,6 +35,7 @@ $body-font-size: 16px;
 $site-text-color: $tyre;
 /*$site-font-family: 'Roboto', sans-serif;*/
 $site-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$site-line-height: 1.4;
 $site-link-color: #03a9f4;
 $h1-size: 2em;
 $h2-size: 1.5em;
@@ -55,3 +56,5 @@ $shadow-1: 0 2px 2px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
 $shadow-2: 0 3px 4px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
            0 3px 3px -2px rgba(0, 0, 0, $shadow-key-umbra-opacity),
            0 1px 8px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
+
+/* TODO add common border-radius? i.e. for Card + Message + etc to use */
